# OpenGLTest

NetTest/: CMakeLists.txt  TCPClient.cpp  TCPServer.cpp
OpenGLTest/: CMakeLists.txt
OpenGLTest/glad/include/glad/: glad.h
OpenGLTest/glad/src/: glad.c
OpenGLTest/src/: OpenGLTest.cpp
WinsockServer/: client.cpp  server.cpp
glad/: CMakeLists.txt
src/: CMakeLists.txt
